<resources>
    <string name="app_name">SeoulTrip</string>
    <string name="complete">OK</string>
    <string name="create">Create</string>
    <string name="add">Add</string>
    <string name="add_short">Add</string>
    <string name="share">Share</string>
    <string name="retry">Retry</string>
    <string name="close">Close</string>
    <string name="select">Select</string>
    <string name="cancel_select">Cancel</string>
    <string name="course_information">Information</string>
    <string name="add_to_my_course">Add to my course</string>
    <string name="start">Start</string>
    <string name="restart">Restart</string>
    <string name="start_time">Start time</string>
    <string name="finish_time">End Time</string>
    <string name="give_up">Give up</string>
    <string name="remove">Remove</string>
    <string name="success">Success</string>
    <string name="failed">Fail</string>
    <string name="remove_list">Remove from list</string>
    <string name="address">Address</string>
    <string name="please_wait">Please wait.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="finish">Finish</string>
    <string name="nim"></string>
    <string name="search">Search</string>
    <string name="time">Time</string>
    <string name="arrival">Arrival</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="information">Information</string>
    <string name="setting">Setting</string>
    <string name="error">Error</string>
    <string name="put">Put</string>
    <string name="like">Like</string>
    <string name="hit">Hit</string>
    <string name="telephone">Telephone</string>
    <string name="website">Website</string>
    <string name="source">Source</string>
    <string name="intro">Introduce</string>
    <string name="addition_info">Additional Information</string>
    <string name="picture">Picture</string>
    <string name="map">Map</string>
    <string name="warning">Warning</string>
    <string name="course">course</string>
    <string name="a_times">%1$d times</string>
    <string name="a_ea">%1$d</string>
    <string name="favorite">Favorite</string>
    <string name="my_course">My Course</string>
    <string name="shared_course">Shared Course</string>
    <string name="success_course_game">Success Course Game</string>
    <string name="attraction_list">Attraction List</string>
    <string name="recommend_course">Recommend Course</string>
    <string name="course_game">Course Game</string>
    <string name="check_db">Checking the DB version.\nPlease wait.</string>
    <string name="no_list">There is no list</string>
    <string name="no_save_course">There is no saved course</string>
    <string name="no_save_course_attraction_yet">There is no stored attractions.</string>
    <string name="no_favorite">There is no favorite items.</string>
    <string name="please_enter_search_contents">Please enter a query.</string>
    <string name="show_kakao_map">View on Map</string>
    <string name="look_similar_attraction">View similar attractions</string>
    <string name="no_search_result">No search results.</string>
    <string name="search_result_count">results</string>
    <string name="no_information">There is no information.</string>
    <string name="save_clipboard">Successfully saved to the clipboard.</string>
    <string name="attraction_count">Total %1$d attractions</string>
    <string name="month">.</string>
    <string name="day">.</string>
    <string name="hour">:</string>
    <string name="hour2">time</string>
    <string name="minute">:</string>
    <string name="second"></string>
    <string name="are_you_finish">Are you sure you want to quit SeoulTrip?</string>
    <string name="are_you_remove">Are you sure you want to delete from the list?</string>
    <string name="are_you_give_up">Do you really want to give up?</string>
    <string name="are_you_continue">Would you like to move on to the next course?</string>
    <string name="select_district">Please select the district you want to query.</string>
    <string name="select_order">Please select the desired alignment.</string>
    <string name="checking_location">Checking the location.</string>
    <string name="fail_location_check">Check the location failed.</string>
    <string name="check_permission">Please check the location service permission.</string>
    <string name="fail_location_message">If not long after to enable location services, please wait.</string>
    <string name="no_respond_server">The server is not responding.</string>
    <string name="already_share">Already shared course.</string>
    <string name="share_notice_message">In order to share the course, the sights must be 3 or more 10 or less.</string>
    <string name="success_share">Successfully share.</string>
    <string name="fail_share">Share failed.</string>
    <string name="are_you_save_course">Do you want to save the course?</string>
    <string name="success_save">Successfully saved.</string>
    <string name="fail_save">Failed to save the course.</string>
    <string name="success_add">Successfully added.</string>
    <string name="gotoup">Back to top</string>
    <string name="order">Sort</string>
    <string name="show_district">View by district</string>
    <string name="ascending_order">Ascending</string>
    <string name="descending_order">Descending</string>
    <string name="my_shared_course">View my share course</string>
    <string name="show_all_shared_course">View all share course.</string>
    <string name="fab_remove_favorite">Delete favorites</string>
    <string name="fab_add_favorite">Add favorites</string>
    <string name="success_login">Login successful</string>
    <string name="cancel_login">Login cancel</string>
    <string name="error_login">Login error</string>
    <string name="add_favorite">Add to Favorites.</string>
    <string name="remove_favorite">Remove to Favorites.</string>
    <string name="save_to_my_course">Add to my own course.</string>
    <string name="remain_time">Time remaining</string>
    <string name="share_result">Share Results</string>
    <string name="check_location">Checking Location</string>
    <string name="pass">Pass</string>
    <string name="no_address">No address details</string>
    <string name="current_progress">Complete %2$d of %1$d</string>
    <string name="fb_mention">%1$s\'s finished \"%2$s\" course . Time : %3$s, Course list : %4$s</string>
    <string name="time_hms">%1$dh %2$dm %3$ds</string>
    <string name="time_ms">%1$dm %2$ds</string>
    <string name="time_s">%1$ds</string>
    <string name="date_time">%1$s %2$s, %3$s : %4$s</string>
    <string name="distance_to_attraction">Approximately %1$d meters of distance to attraction.</string>
    <string name="distance_to_attraction_failed">Approximately %1$d meters of distance to attraction. You must be within %2$d meters from the attraction.</string>
    <string name="add_course_game">Add to course game</string>
    <string name="add_course_game_mycourse">Add from my course</string>
    <string name="add_course_game_shared">Add from shared Course.</string>
    <string name="add_course_game_random">Add from random</string>
    <string name="add_my_course">Add my course</string>
    <string name="course_title">Course Title</string>
    <string name="complete_time">Achieving time (1-48 hours)</string>
    <string name="share_my_course">Share my course</string>
    <string name="explanation_my_course">Description of the course</string>
    <string name="used_open_source">Used Open Source</string>
    <string name="used_data_source">Using Data Source</string>
    <string name="change_database_lang">Change Database Language</string>
    <string name="no_facebook_login_info">No Facebook login information.</string>
    <string name="check_network_status">Please check the network status.</string>
    <string name="please_retry">Please try again.</string>
    <string name="newest_database">The database is up to date.</string>
    <string name="create_database">The database being created.</string>
    <string name="update_database">Database Update</string>
    <string name="downloading_database">Download database ...</string>
    <string name="creating_database">Create database...</string>
    <string name="are_you_change_language">To change the database language, you must restart the application.\nDo you want to continue?</string>
    <string name="show_all_map">Show all map</string>
    <string name="init_introduce_attraction">Introduce Attraction</string>
    <string name="init_my_course">Personalized Course</string>
    <string name="init_share_course">Share Course</string>
    <string name="init_favorite">Favorite Attraction</string>
    <string name="init_course_game">Course Game</string>
    <string name="init_intro_contents">You can easily find information\non attractions in Seoul.</string>
    <string name="init_my_contents">Create your own course using\nthe attractions in Seoul.</string>
    <string name="init_share_contents">You can share your own course,\nand you can see other people\'s course.</string>
    <string name="init_favorite_contents">If you add attractions in Seoul to Favorites,\nyou can see at once through the map.</string>
    <string name="init_game_contents">You can enjoy the course game through\nyour own course and other people\'s course.</string>
    <string name="init_select_language">Please select\n your database language.</string>
    <string name="init_start_no_login">Start with no login</string>
</resources>