<?xml version="1.0" encoding="utf-8"?>
<com.github.ppamorim.dragger.DraggerView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:dragger_layout="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dragger_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    dragger_layout:drag_view_id="@+id/drag_view"
    dragger_layout:shadow_view_id="@+id/shadow_view"
    >

    <FrameLayout
        android:id="@+id/shadow_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#BF000000"/>

    <RelativeLayout
        android:id="@+id/drag_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_background_color"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/main_toolbar"
            app:contentInsetStart="0dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:minHeight="?attr/actionBarSize"
            android:background="@color/dark_tab_bar_color"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">


                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_my_course"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_centerInParent="true"
                    />

                <View
                    android:layout_alignParentBottom="true"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/line_color"
                    />

            </RelativeLayout>


        </android.support.v7.widget.Toolbar>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:orientation="vertical"
            android:background="@color/dark_background_color"
            android:onClick="linearOnClick"
            >
            <!--<View-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="1dp"-->
                <!--android:background="@color/guillotine_background_dark"-->
                <!--/>-->


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/title"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/course_title"
                android:textCursorDrawable="@drawable/text_cursor_cyan"
                app:met_baseColor="@color/white"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="20"
                app:met_primaryColor="@color/white"
                app:met_singleLineEllipsis="true"
                />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/time"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/complete_time"
                android:textCursorDrawable="@drawable/text_cursor_cyan"
                android:inputType="number"
                app:met_baseColor="@color/white"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="20"
                app:met_primaryColor="@color/white"
                app:met_singleLineEllipsis="true"
                />


        </LinearLayout>

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/darkPrimary"
            android:text="@string/create"
            android:textColor="@color/dark_gray"
            android:textSize="18dp"
            android:textAllCaps="false"
            />

    </RelativeLayout>

</com.github.ppamorim.dragger.DraggerView>