<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dark_background_color"
    android:id="@+id/main_activity_root"
    android:paddingTop="?attr/actionBarSize"
    android:clipToPadding="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_color"
            />

        <RelativeLayout
            android:id="@+id/rl_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            >

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:hint="@string/course_title"
                android:textCursorDrawable="@drawable/text_cursor_cyan"
                app:met_baseColor="@color/white"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="20"
                app:met_primaryColor="@color/white"
                app:met_singleLineEllipsis="true"
                />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:hint="@string/complete_time"
                android:textCursorDrawable="@drawable/text_cursor_cyan"
                android:inputType="number"
                android:imeOptions="actionDone"
                app:met_baseColor="@color/white"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="20"
                app:met_primaryColor="@color/white"
                app:met_singleLineEllipsis="true"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_made"
            android:layout_below="@+id/rl_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/li_course_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentTop="true"
                android:gravity="center_horizontal"
                android:weightSum="5"
                >

                <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                    android:id="@+id/seekbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:layout_gravity="bottom"
                    app:dsb_min="3"
                    app:dsb_max="10"
                    app:dsb_value="5"
                    />

                <TextView
                    android:id="@+id/create_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/create"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_cv_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/li_course_count"
                >

                <android.support.v7.widget.RecyclerView
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:id="@+id/rv"
                    >
                </android.support.v7.widget.RecyclerView>


            </LinearLayout>


        </RelativeLayout>



        <Button
            android:id="@+id/submit_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="@color/darkPrimary"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textAllCaps="false"
            />

    </RelativeLayout>

</RelativeLayout>