<?xml version="1.0" encoding="utf-8"?>
<com.github.ppamorim.dragger.DraggerView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:dragger_layout="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dragger_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    dragger_layout:drag_view_id="@+id/drag_view"
    dragger_layout:shadow_view_id="@+id/shadow_view"
    >

    <FrameLayout
        android:id="@+id/shadow_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#BF000000"/>

    <RelativeLayout
        android:id="@+id/drag_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/main_toolbar"
                app:contentInsetStart="0dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:minHeight="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize">

                </RelativeLayout>


            </android.support.v7.widget.Toolbar>

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_course_game"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_centerInParent="true"
                />

        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:orientation="vertical"
            android:background="@color/dark_background_color"
            android:weightSum="3"
            >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <!--<ImageView-->
                    <!--android:id="@+id/img1"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:scaleType="centerCrop"-->
                    <!--android:src="@drawable/bg_course_game1"-->
                    <!--/>-->

                <Button
                    android:id="@+id/my_course_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#23293f"
                    android:textAllCaps="false"
                    android:text="@string/add_course_game_mycourse"
                    android:textSize="20dp"
                    android:textColor="@color/white"
                    />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <!--<ImageView-->
                    <!--android:id="@+id/img2"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:scaleType="centerCrop"-->
                    <!--android:src="@drawable/bg_course_game2"-->
                    <!--/>-->

                <Button
                    android:id="@+id/shared_course_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#192038"
                    android:padding="10dp"
                    android:text="@string/add_course_game_shared"
                    android:textSize="20dp"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <!--<ImageView-->
                    <!--android:id="@+id/img3"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:scaleType="centerCrop"-->
                    <!--android:src="@drawable/bg_course_game3"-->
                    <!--/>-->

                <Button
                    android:id="@+id/random_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#131b35"
                    android:text="@string/add_course_game_random"
                    android:textSize="20dp"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    />

            </FrameLayout>


        </LinearLayout>

    </RelativeLayout>

</com.github.ppamorim.dragger.DraggerView>